syntax = "proto3";
package user;

import "google/api/annotations.proto";
import "github.com/lyft/protoc-gen-validate/validate/validate.proto";

message ProfileCreateRequest {
  string first_name = 1 [(validate.rules).string.min_len = 1];
  string last_name = 2 [(validate.rules).string.min_len = 1];
}

message ProfileCreateResponse {}

service UserService {
  rpc ProfileCreate(ProfileCreateRequest) returns (ProfileCreateResponse) {
    option (google.api.http) = {
      post: "/v1/user/profile"
      body: "*"
    };
  }
}
